--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: "https://spacegirlhere.github.io"
 # THEME-SPECIFIC CONFIGURATION
 title: SpaceGirl Blog                     # site's title
 description: "Exploring the Mysteries of Physics, Space, Cosmos, and Mathematics"      # used by search engines
-avatar: assets/img/triangle.png                         # Empty for no avatar in navbar
+avatar: assets/img/logo.png                         # Empty for no avatar in navbar
 favicon: assets/favicon.ico                             # Icon displayed in the tab
 
 # Header and footer text
